@@ -7,7 +7,9 @@ Known issues:
 Release notes 0.5.0 (TBA)
 - Introduction of dependency on OAuth plug-in.
 - Controller "elvis" clean up.
-- Domain class comment clean up. 
+- Domain class comment clean up.
+- Introduction of most recent comment listing.
+- Footer output update. 
 
 Release notes 0.4.5 (1st June 2010)
 - Further PicasaService code coverage. 
